# thermalvis

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  package.xml
apps/: CMakeLists.txt
apps/dd-evaluator/: CMakeLists.txt  dd_evaluator.cpp  dd_evaluator.hpp  evaluation.cpp  evaluation.hpp
apps/dir-reader/: CMakeLists.txt
apps/dir-reader/include/: dir_reader.h
apps/dir-reader/src/: dir_reader.cpp
apps/mm-calibrator/: CMakeLists.txt  mm_calibrator.cpp
apps/mono-slam/: CMakeLists.txt  mono_slam.cpp
apps/mono-slam/cmake/: link_boost_dlls.cmake  link_opencv_dlls.cmake  link_qt_dlls.cmake
apps/mono-slam/include/: mono_slam.h
apps/mono-slam/src/: mono_slam.cpp
apps/win-optris/: CMakeLists.txt  optris_windows.cpp  optris_windows.h  optris_windows_demo.cpp
apps/win-optris/include/: optris_windows.h
apps/win-optris/src/: optris_windows.cpp  optris_windows_demo.cpp
calib/: miricle_307k.yml  optris_pi450.txt  optris_pi450_ntu_eee_irlab.yml
cfg/: calibrator.cfg  flow.cfg  slam.cfg  streamer.cfg
cmake/: configure_arch.cmake  configure_docs.cmake  configure_framework.cmake  configure_os.cmake  configure_sample_data.cmake  find_avutil.cmake  find_boost.cmake  find_doxygen.cmake  find_eigen.cmake  find_opencv.cmake  find_optris.cmake  find_pcl.cmake  find_qt.cmake  link_boost_dlls.cmake  link_opencv_dlls.cmake
cmake/configure/: architecture.cmake  catkin.cmake  compiler.cmake  default_paths.cmake  framework.cmake  os.cmake
cmake/find/: boost.cmake  eigen.cmake  opencv.cmake  optris.cmake  pcl.cmake  qt.cmake
cmake/link/: qt.cmake
include/: calibration.hpp  camera.hpp  cloudproc.hpp  directory_stream.hpp  extrinsics.hpp  features.hpp  ffmpeg_resources.hpp  geometry.hpp  improc.hpp  input_stream.hpp  input_stream_config.hpp  intrinsics.hpp  keyframes.hpp  launch.hpp  opencv_resources.hpp  optris_stream.hpp  optris_windows.h  pcl_resources.hpp  program.hpp  radiometric.hpp  reconstruction.hpp  ros_resources.hpp  ros_stream.hpp  sba.hpp  serial_comms.hpp  sparse_flow.hpp  stereo.hpp  streamer_qt.hpp  tools.hpp  tracks.hpp  video.hpp
include/calibrator/: calib.hpp  calibration.hpp  calibrator_config.hpp  extrinsics.hpp  intrinsics.hpp
include/core/: annotation.hpp  camera.hpp  colormapping.hpp  cvimagewidget.hpp  features.hpp  general_resources.hpp  improc.hpp  initialization.hpp  launch.hpp  linux.hpp  opencv_redefinitions.hpp  opencv_resources.hpp  program.hpp  ros_resources.hpp  ros_substitution.hpp  timing.hpp  tools.hpp  tracks.hpp  windows.hpp
include/flow/: flow_config.hpp  ros_flow.hpp  sparse_flow.hpp
include/slam/: cloudproc.hpp  geometry.hpp  keyframes.hpp  monocular_slam.hpp  monoslam.hpp  pcl_resources.hpp  reconstruction.hpp  ros_slam.hpp  sba.hpp  slam_config.hpp  triangulation.hpp  videoslam.hpp  visualization.hpp
include/streamer/: directory_stream.hpp  input_stream.hpp  input_stream_config.hpp  radiometric.hpp  ros_stream.hpp  serial_comms.hpp  stereo.hpp  streamer_config.hpp  streamer_defines.hpp  video.hpp
launch/: calibrate_optris.launch  calibrator_demo.launch  calibrator_monoexample.launch  devel_test.launch  flow_optris.launch  image_extraction.launch  image_processing.launch  lkt_test.launch  optris_flow_live.launch  optris_live.launch  optris_playback.launch  optris_review.launch  optris_review_with_calibration.launch  system_demo.launch  video_extraction.launch  windows_demo.launch  windows_dev.launch  windows_test.launch
launch/icarcv/: sequence_1.launch  sequence_2.launch  sequence_4.launch  sequence_5.launch
msg/: feature_tracks.msg  pose_confidence.msg
nodes/: CMakeLists.txt
nodes/calibrator/: CMakeLists.txt  calibrator.cpp  calibrator.hpp
nodes/flow/: CMakeLists.txt  flow.cpp  flow.hpp
nodes/flow/include/: flow.hpp
nodes/flow/launch/: flow_windows_test.launch
nodes/flow/src/: flow.cpp  ros_flow.cpp
nodes/slam/: CMakeLists.txt  slam.cpp  slam.hpp
nodes/streamer/: CMakeLists.txt  streamer.cpp  streamer.hpp
nodes/streamer/include/: streamer.hpp
qt/: CMakeLists.txt
qt/build-calibrator-Desktop-Debug/: moc_mainwindow_calibrator.cpp  ui_mainwindow_calibrator.h
qt/build-calibrator-Desktop_Qt_5_3_MSVC2012_OpenGL_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow_calibrator.h
qt/build-flow-Desktop-Debug/: moc_mainwindow_flow.cpp  ui_mainwindow_flow.h
qt/build-flow-Desktop_Qt_5_3_MSVC2012_OpenGL_32bit-Debug/: .gitignore  ui_mainwindow_flow.h
qt/build-slam-Desktop-Debug/: moc_mainwindow_slam.cpp  ui_mainwindow_slam.h
qt/build-slam-Desktop_Qt_5_3_MSVC2012_OpenGL_32bit-Debug/: .gitignore  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow_slam.h
qt/build-streamer-Desktop-Debug/: moc_mainwindow_streamer.cpp  ui_mainwindow_streamer.h
qt/build-streamer-Desktop_Qt_5_3_MSVC2012_OpenGL_32bit-Debug/: .gitignore  ui_mainwindow_streamer.h
qt/calibrator/: CMakeLists.txt  calibrator.pro  main.cpp  mainwindow_calibrator.cpp  mainwindow_calibrator.h  mainwindow_calibrator.ui
qt/flow/: .gitignore  CMakeLists.txt  flow.pro  main.cpp  mainwindow_flow.cpp  mainwindow_flow.h  mainwindow_flow.ui
qt/slam/: .gitignore  CMakeLists.txt  main.cpp  mainwindow_slam.cpp  mainwindow_slam.h  mainwindow_slam.ui  slam.pro
qt/streamer/: .gitignore  CMakeLists.txt  main.cpp  mainwindow_streamer.cpp  mainwindow_streamer.h  mainwindow_streamer.ui  streamer.pro
scripts/: guvcview-patch.txt  open_in_geany.sh
scripts/batch/: calibrate.bat  clear_images.bat  record_images.bat  review_images.bat  test_calibration.bat
scripts/matlab/: build_combined_sequence.m  check_timestamps.m  compare_timing.m  compile_matrix_video.m  (+5 more)
src/: calibration.cpp  camera.cpp  cloudproc.cpp  directory_stream.cpp  extrinsics.cpp  features.cpp  geometry.cpp  improc.cpp  input_stream.cpp  input_stream_config.cpp  intrinsics.cpp  keyframes.cpp  launch.cpp  optris_stream.cpp  optris_windows.cpp  program.cpp  radiometric.cpp  reconstruction.cpp  ros_flow.cpp  ros_resources.cpp  ros_stream.cpp  sba.cpp  serial_comms.cpp  sparse_flow.cpp  stereo.cpp  streamer_qt.cpp  tools.cpp  tracks.cpp  video.cpp
(+162 files in other folders)
