cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

SET(PROJECT_NAME "thermalvis")
project(${PROJECT_NAME})

include(cmake/configure_arch.cmake)
include(cmake/configure_os.cmake)
include(cmake/configure_compiler.cmake)
include(cmake/configure_framework.cmake)
include(cmake/configure_sample_data.cmake)

LIST(APPEND EXTERNAL_LIBRARIES 
	"avutil"
	"doxygen"
	"qt"
)
foreach(EXTERNAL_LIB ${EXTERNAL_LIBRARIES}) 
	include(cmake/find_${EXTERNAL_LIB}.cmake)
endforeach(EXTERNAL_LIB)

IF(IS_WINDOWS)
	IF(EXISTS "C:/eigen")
		OPTION(USE_EIGEN "Build Eigen-dependent functions." TRUE)
	ELSE()
		OPTION(USE_EIGEN "Build Eigen-dependent functions." FALSE)
	ENDIF()
ELSE()
	IF(EXISTS "/usr/include/eigen3")
		OPTION(USE_EIGEN "Build Eigen-dependent functions." TRUE)
	ELSE()
		OPTION(USE_EIGEN "Build Eigen-dependent functions." FALSE)
	ENDIF()
ENDIF()

IF(USE_EIGEN)
	IF(WIN32 OR win64)
		SET(Eigen_DIR "C:/eigen" CACHE STRING "..." FORCE)
	ELSE()
		SET(Eigen_DIR "/usr/include/eigen3" CACHE STRING "..." FORCE)
	ENDIF()
	
	IF(NOT EXISTS "${Eigen_DIR}")
		MESSAGE(FATAL_ERROR "Provided path for Eigen directory does not appear to exist!")
	ENDIF()
	
	IF (IS_WINDOWS)
		IF(NOT EXISTS "${Eigen_DIR}/cmake/FindEigen3.cmake")
			MESSAGE(FATAL_ERROR "Could not find <${Eigen_DIR}/cmake/FindEigen3.cmake>!")
		ENDIF()
		MESSAGE(STATUS "Adding following path to CMAKE_MODULE_PATH: <${Eigen_DIR}/cmake>")
		SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${Eigen_DIR}/cmake")
	ENDIF()
	
	FIND_PACKAGE(Eigen3)
	IF(EIGEN3_FOUND)
		ADD_DEFINITIONS( -D_USE_EIGEN_ )
		SET(ADDITIONAL_INCLUDES ${ADDITIONAL_INCLUDES} ${EIGEN3_INCLUDE_DIR})
	ELSE()
		MESSAGE(FATAL_ERROR "Eigen not found! Much of the libraries can be built without Eigen, however, so consider opting not to use it.")
	ENDIF()
ENDIF()

ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )

find_package(PCL QUIET)
IF(PCL_FOUND)
	IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
		STRING( FIND ${PCL_COMMON_LIBRARY} "32" APOSITION )
		IF (NOT "${APOSITION}" STREQUAL "-1")
			OPTION(USE_PCL "Build PCL-dependent functions." FALSE)
			MESSAGE(WARNING "This is a 64-bit build, and it looks like CMake actually found the 32-bit PCL libraries to link to! Therefore PCL has been excluded from the build.")
		ELSE()
			OPTION(USE_PCL "Build PCL-dependent functions." TRUE)
		ENDIF()
	ELSE()
		STRING( FIND ${PCL_COMMON_LIBRARY} "64" APOSITION ) 
		IF (NOT "${APOSITION}" STREQUAL "-1")
			OPTION(USE_PCL "Build PCL-dependent functions." FALSE)
			MESSAGE(WARNING "This is a 32-bit build, and it looks like CMake actually found the 64-bit PCL libraries to link to! Therefore PCL has been excluded from the build.")
		ELSE()
			OPTION(USE_PCL "Build PCL-dependent functions." TRUE)
		ENDIF()
	ENDIF()
ELSE()
	OPTION(USE_PCL "Build PCL-dependent functions." FALSE)
ENDIF()

IF(USE_PCL)
	FIND_PACKAGE( PCL COMPONENTS common io )
	IF(PCL_FOUND)
		MESSAGE(STATUS "PCL Found!")
		ADD_DEFINITIONS( -D_USE_PCL_ )
		INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
		SET(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} ${PCL_LIBRARIES})
	ELSE()
		MESSAGE(FATAL_ERROR "PCL not found! Much of the libraries can be built without PCL, however, so consider opting not to use it.")
	ENDIF()
	IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
		STRING( FIND ${PCL_COMMON_LIBRARY} "32" APOSITION )
		IF (NOT "${APOSITION}" STREQUAL "-1")
			MESSAGE(WARNING "This is a 64-bit build, and it looks like CMake actually found the 32-bit PCL libraries to link to! This may cause compilation problems..")
		ENDIF()
	ELSE()
		STRING( FIND ${PCL_COMMON_LIBRARY} "64" APOSITION ) 
		IF (NOT "${APOSITION}" STREQUAL "-1")
			MESSAGE(WARNING "This is a 32-bit build, and it looks like CMake actually found the 64-bit PCL libraries to link to! This may cause compilation problems..")
		ENDIF()
	ENDIF()
ENDIF()

find_package(Boost QUIET)
IF(Boost_FOUND)
	OPTION(USE_BOOST "Build Boost-dependent functions." TRUE)
ELSE()
	OPTION(USE_BOOST "Build Boost-dependent functions." FALSE)
ENDIF()

IF(USE_BOOST)
	SET(Boost_USE_STATIC_LIBS OFF) 
	SET(Boost_USE_MULTITHREADED ON)  
	SET(Boost_USE_STATIC_RUNTIME OFF) 
	
	FIND_PACKAGE(Boost COMPONENTS system filesystem program_options date_time REQUIRED)
	
	IF(Boost_FOUND)
		MESSAGE(STATUS "Boost found!")
		
		MESSAGE(STATUS "CMAKE_GENERATOR  = ${CMAKE_GENERATOR}")
		IF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 10 Win64") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 10 2010 Win64"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib64-msvc-10.0" CACHE PATH "" FORCE)
		ELSEIF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 10") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 10 2010"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib32-msvc-10.0" CACHE PATH "" FORCE)
		ELSEIF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 11 Win64") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 11 2012 Win64"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib64-msvc-11.0" CACHE PATH "" FORCE)
		ELSEIF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 11") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 11 2012"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib32-msvc-11.0" CACHE PATH "" FORCE)
		ELSEIF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 12 Win64") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 12 2013 Win64"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib64-msvc-12.0" CACHE PATH "" FORCE)
		ELSEIF(("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 12") OR ("${CMAKE_GENERATOR}" STREQUAL "Visual Studio 12 2013"))
			SET(Boost_LIBRARY_DIR "${Boost_INCLUDE_DIR}/lib32-msvc-12.0" CACHE PATH "" FORCE)
		ENDIF()
		
		FIND_PACKAGE(Boost COMPONENTS system filesystem program_options date_time REQUIRED)
		
		MESSAGE(STATUS "Boost_INCLUDE_DIR = ${Boost_INCLUDE_DIR}")
		MESSAGE(STATUS "Boost_LIBRARY_DIR = ${Boost_LIBRARY_DIR}")
		
		INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
		link_directories(${Boost_LIBRARY_DIR})
		ADD_DEFINITIONS( -D_USE_BOOST_ )
	ELSE()
		MESSAGE(FATAL_ERROR "Boost not found! It is possible boost is installed, but not for this architecture (e.g. 64-bit libraries may be installed, but not 32-bit, or the version installed may be for the wrong version of Visual Studio.")
	ENDIF()
ELSE()
	IF (NOT BUILD_FOR_ROS)
		MESSAGE(FATAL_ERROR "If not building for ROS, the Boost libraries must be included for timekeeping and other purposes. Please ensure either the <BUILD_FOR_ROS> or <USE_BOOST> flag is set true.")
	ENDIF()
ENDIF()

IF(USE_PCL)
	IF(NOT USE_BOOST)
		MESSAGE(WARNING "Though the user has specified not to include Boost, it may still be included because PCL incorporates Boost anyway.")
	ENDIF()
ENDIF()
	
IF(Boost_FOUND)
	IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
		IF (IS_WINDOWS)
			STRING( FIND ${Boost_SYSTEM_LIBRARY_DEBUG} "lib64" APOSITION )
			IF ("${APOSITION}" STREQUAL "-1")
				MESSAGE(FATAL_ERROR "This is a 64-bit build, and it looks like CMake actually found the 32-bit Boost libraries to link to!")
			ENDIF()
		ELSE()
			STRING( FIND ${Boost_SYSTEM_LIBRARY_DEBUG} "x86_64" APOSITION )
			IF ("${APOSITION}" STREQUAL "-1")
				MESSAGE(FATAL_ERROR "This is a 64-bit build, and it looks like CMake actually found the 32-bit Boost libraries to link to!")
			ENDIF()
		ENDIF()
	ELSE()
		STRING( FIND ${Boost_SYSTEM_LIBRARY_DEBUG} "lib64" APOSITION ) 
		IF (NOT "${APOSITION}" STREQUAL "-1")
			MESSAGE(FATAL_ERROR "This is a 32-bit build, and it looks like CMake actually found the 64-bit Boost libraries to link to!")
		ENDIF()
	ENDIF()
ENDIF()

SET(OptrisTestLoc "${USERPROFILE}/Documents/Optris/SDK")
IF(NOT EXISTS "${OptrisTestLoc}")
	SET(OptrisTestLoc "C:/Users/Public/Documents/Optris/SDK")
	IF(NOT EXISTS "${OptrisTestLoc}")
		OPTION(USE_OPTRIS_SDK "Build with Optris compatability" FALSE)
	ELSE()
		OPTION(USE_OPTRIS_SDK "Build with Optris compatability" TRUE)
	ENDIF()
ELSE()
	OPTION(USE_OPTRIS_SDK "Build with Optris compatability" TRUE)
ENDIF()

IF(BUILD_FOR_ROS)
	ADD_DEFINITIONS( -D_BUILD_FOR_ROS_ )
ENDIF()
	
FIND_PACKAGE( OpenCV HINTS "/usr/local/share/OpenCV" "${USERPROFILE}/Documents/opencv/build" "C:/Users/Public/Documents/opencv/build" "${USERPROFILE}/Documents/Code/BUILDS/opencv/build" "${USERPROFILE}/Documents/GitHub/BUILDS/OpenCV")
STRING(REGEX REPLACE "/Release/Release" "/Release" OpenCV_LIB_DIR_OPT "${OpenCV_LIB_DIR_OPT}")
STRING(REGEX REPLACE "/Debug/Debug" "/Debug" OpenCV_LIB_DIR_DBG "${OpenCV_LIB_DIR_DBG}")

IF(OpenCV_FOUND AND ("${OpenCV_DIR}" STREQUAL "${OpenCV_CONFIG_PATH}") AND (NOT("${OpenCV_LIB_DIR_DBG}" STREQUAL "/Debug")) AND (NOT("${OpenCV_LIB_DIR_OPT}" STREQUAL "/Release")) )
	MESSAGE(STATUS "OpenCV Found!")
	
	if ("${OpenCV_LIB_DIR_OPT}" STREQUAL "")
		IF (NOT IS_WINDOWS)
			SET(OpenCV_LIB_DIR_OPT "/usr/local/lib")
			SET(OpenCV_LIB_DIR_DBG "/usr/local/lib")
			SET(OpenCV_BIN_DIR_OPT "/usr/local/lib")
			SET(OpenCV_BIN_DIR_DBG "/usr/local/lib")
		ELSE()
			MESSAGE(FATAL_ERROR "OpenCV_LIB_DIR_OPT is empty!")
		ENDIF()
	else()
		STRING(REGEX REPLACE "/lib" "/bin" OpenCV_BIN_DIR_OPT "${OpenCV_LIB_DIR_OPT}")
		STRING(REGEX REPLACE "/lib" "/bin" OpenCV_BIN_DIR_DBG "${OpenCV_LIB_DIR_DBG}")
	endif()
	
ELSEIF(EXISTS "${OpenCV_DIR}/")
	MESSAGE(WARNING "OpenCV not entirely found, but directory address <OpenCV_DIR> located and so assuming local build at ${OpenCV_DIR}")
	IF( (NOT EXISTS "${OpenCV_DIR}/lib/Debug/") AND (NOT EXISTS "${OpenCV_DIR}/lib/Release/") )
		MESSAGE(FATAL_ERROR "Provided path for OpenCV does not appear to contain valid debug OR release libraries!")
	ENDIF()
	
	SET(OpenCV_LIB_DIR_OPT "${OpenCV_DIR}/lib/Release" CACHE STRING "..." FORCE)
	SET(OpenCV_LIB_DIR_DBG "${OpenCV_DIR}/lib/Debug" CACHE STRING "..." FORCE)
	SET(OpenCV_3RDPARTY_LIB_DIR_OPT "${OpenCV_DIR}/lib/Release" CACHE STRING "..." FORCE)
	SET(OpenCV_3RDPARTY_LIB_DIR_DBG "${OpenCV_DIR}/lib/Debug" CACHE STRING "..." FORCE)
	
	SET(OPENCV_FOUND TRUE CACHE BOOL "..." FORCE)
	SET(OpenCV_FOUND TRUE CACHE BOOL "..." FORCE)
	
	SET(OpenCV_BIN_DIR_OPT "${OpenCV_DIR}/bin/Release")
	SET(OpenCV_BIN_DIR_DBG "${OpenCV_DIR}/bin/Debug")
	SET(OpenCV_CONFIG_PATH "${OpenCV_DIR}" CACHE STRING "..." FORCE)
ELSE()
	MESSAGE(FATAL_ERROR "OpenCV not found! Please set the <OpenCV_DIR> variable to the OpenCV build directory.")
ENDIF()

IF(OpenCV_FOUND)
	INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
	LIST(APPEND ADDITIONAL_LIBRARIES ${OpenCV_LIBS})
	IF (IS_WINDOWS)
		STRING(REGEX REPLACE "\\." "" OPENCV_VER "${OpenCV_VERSION}")
	ELSE()
		SET(OPENCV_VER "")
	ENDIF()
	IF(OpenCV_VERSION_MAJOR GREATER 2)
		MESSAGE(STATUS "OpenCV Version is 3+, so some functions differ. This should be handled by compiler directives.")
		ADD_DEFINITIONS( -D_OPENCV_VERSION_3_PLUS_ )
	ENDIF()
	IF (OPENCV_GPU_FOUND)
		MESSAGE(STATUS "OpenCV GPU module found, so including it.")
		ADD_DEFINITIONS( -D_USE_OPENCV_GPU_ )
	ENDIF()
ENDIF()

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${ADDITIONAL_INCLUDES})

SET(LIBRARY_NAME "thermalvis")
FILE(GLOB_RECURSE "${LIBRARY_NAME}_LIB_HEADERS" include/*.h*)
FILE(GLOB_RECURSE "${LIBRARY_NAME}_LIB_SOURCES" src/*.cpp)
ADD_LIBRARY(${LIBRARY_NAME} ${${LIBRARY_NAME}_LIB_SOURCES} ${${LIBRARY_NAME}_LIB_HEADERS} )
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${ADDITIONAL_LIBRARIES})
MESSAGE(STATUS "ADDITIONAL_LIBRARIES = ${ADDITIONAL_LIBRARIES}")

LIST(APPEND SUBLIBRARY_NAMES "streamer" "flow" "slam")

foreach(SUBLIB_NAME ${SUBLIBRARY_NAMES})
	SET(APPENDED_SUBLIB_NAME "thermalvis-${SUBLIB_NAME}")
	string(TOUPPER "THERMALVIS_${SUBLIB_NAME}" UPPERCASE_NAME)
	FILE(GLOB "${UPPERCASE_NAME}_LIB_HEADERS" include/*.h* include/${SUBLIB_NAME}/*.h*)
	FILE(GLOB "${UPPERCASE_NAME}_LIB_SOURCES" src/${SUBLIB_NAME}/*.cpp)
	ADD_LIBRARY(${APPENDED_SUBLIB_NAME} ${${UPPERCASE_NAME}_LIB_SOURCES} ${${UPPERCASE_NAME}_LIB_HEADERS} )
	TARGET_LINK_LIBRARIES(${APPENDED_SUBLIB_NAME} thermalvis ${ADDITIONAL_LIBRARIES})
endforeach(SUBLIB_NAME) 

IF(BUILD_GUI)
	ADD_SUBDIRECTORY(qt)
ENDIF()

IF(BUILD_APPS)
	ADD_SUBDIRECTORY(apps)
ENDIF()

IF(BUILD_FOR_ROS)
	ADD_SUBDIRECTORY(nodes)
ENDIF()

include(cmake/configure_docs.cmake)
