cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

SET(PROJECT_NAME "thermalvis")
project(${PROJECT_NAME})
LIST(APPEND SUBLIBRARY_NAMES "streamer" "flow" "slam")
ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings" )

include(cmake/configure_arch.cmake)
include(cmake/configure_os.cmake)
include(cmake/configure_compiler.cmake)
include(cmake/configure_framework.cmake)
include(cmake/configure_sample_data.cmake)

LIST(APPEND EXTERNAL_LIBRARIES 
	"avutil"
	"doxygen"
	"qt"
	"eigen"
	"pcl"
	"boost"
	"optris"
	"opencv"
)
foreach(EXTERNAL_LIB ${EXTERNAL_LIBRARIES}) 
	include(cmake/find_${EXTERNAL_LIB}.cmake)
endforeach(EXTERNAL_LIB)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${ADDITIONAL_INCLUDES})

SET(LIBRARY_NAME "thermalvis")
FILE(GLOB_RECURSE "${LIBRARY_NAME}_LIB_HEADERS" include/*.h*)
FILE(GLOB_RECURSE "${LIBRARY_NAME}_LIB_SOURCES" src/*.cpp)
ADD_LIBRARY(${LIBRARY_NAME} ${${LIBRARY_NAME}_LIB_SOURCES} ${${LIBRARY_NAME}_LIB_HEADERS} )
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${ADDITIONAL_LIBRARIES})
MESSAGE(STATUS "ADDITIONAL_LIBRARIES = ${ADDITIONAL_LIBRARIES}")

foreach(SUBLIB_NAME ${SUBLIBRARY_NAMES})
	SET(APPENDED_SUBLIB_NAME "thermalvis-${SUBLIB_NAME}")
	string(TOUPPER "THERMALVIS_${SUBLIB_NAME}" UPPERCASE_NAME)
	FILE(GLOB "${UPPERCASE_NAME}_LIB_HEADERS" include/${SUBLIB_NAME}/*.h*)
	FILE(GLOB "${UPPERCASE_NAME}_LIB_SOURCES" src/${SUBLIB_NAME}/*.cpp)
	ADD_LIBRARY(${APPENDED_SUBLIB_NAME} ${${UPPERCASE_NAME}_LIB_SOURCES} ${${UPPERCASE_NAME}_LIB_HEADERS} )
	TARGET_LINK_LIBRARIES(${APPENDED_SUBLIB_NAME} thermalvis ${ADDITIONAL_LIBRARIES})
endforeach(SUBLIB_NAME) 

IF(BUILD_GUI)
	ADD_SUBDIRECTORY(qt)
ENDIF()

IF(BUILD_APPS)
	ADD_SUBDIRECTORY(apps)
ENDIF()

IF(BUILD_FOR_ROS)
	ADD_SUBDIRECTORY(nodes)
ENDIF()

include(cmake/configure_docs.cmake)
