<?xml version="1.0"?>
<package>
  <name>thermalvis</name>
  <version>0.0.1</version>
  <description>The thermalvis package</description>

  <maintainer email="stephen.vidas@gmail.com">Stephen Vidas</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/thermalvis</url>
  <url type="repository">https://github.com/steevo87/thermalvis/</url>

  <author email="stephen.vidas@gmail.com">Stephen Vidas</author> -->

  <!-- Use build_depend for packages you need at compile time. -->
  <!-- Use buildtool_depend for build tool packages. -->
  <!-- Use run_depend for packages you need at runtime. -->
  <!-- Use test_depend for packages you need only for testing. -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
