cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

IF(WIN32 OR win64)
	IF(NOT CMAKE_SIZEOF_VOID_P EQUAL 8)
		OPTION(USE_OPTRIS_SDK "Build with Optris compatability" TRUE)
	ELSE()
		OPTION(USE_OPTRIS_SDK "Build with Optris compatability" FALSE)
	ENDIF()
	
	IF(USE_OPTRIS_SDK)
		SET(OptrisSDK "$ENV{USERPROFILE}/Documents/Optris/SDK" CACHE FILEPATH "Include directory for Optris SDK")
		IF(EXISTS "${OptrisSDK}")
			SET(OptrisSDK_FOUND TRUE)
			MESSAGE(STATUS "Found OptrisSDK directory at specified path <${OptrisSDK}>.")
		ELSE()
			SET(OptrisSDK_FOUND FALSE)
			MESSAGE(FATAL_ERROR "Unable to find OptrisSDK directory at specified path <${OptrisSDK}>.")
		ENDIF()
		IF(OptrisSDK_FOUND)
			IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
				MESSAGE(WARNING "You cannot build the Windows Optris demo app in 64-bit mode. Please switch to 32-bit mode for this functionality.")
			ELSE()
				ADD_SUBDIRECTORY(win-optris)
			ENDIF()
		ENDIF()
	ENDIF()
ENDIF()

IF(Boost_FOUND)
	ADD_SUBDIRECTORY(dir-reader)
ENDIF()