cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

IF(WIN32 OR win64)
	IF(USE_OPTRIS)	
		SET(OptrisSDK "${OptrisTestLoc}" CACHE FILEPATH "Include directory for Optris SDK")
		IF(EXISTS "${OptrisSDK}")
			SET(OptrisSDK_FOUND TRUE)
			MESSAGE(STATUS "Found OptrisSDK directory at specified path <${OptrisSDK}>.")
		ELSE()
			SET(OptrisSDK_FOUND FALSE)
			MESSAGE(FATAL_ERROR "Unable to find OptrisSDK directory at specified path <${OptrisSDK}>.")
		ENDIF()
		IF(OptrisSDK_FOUND)
			IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
				MESSAGE(WARNING "The Windows Optris demo app does not yet work in 64-bit mode. Please switch to 32-bit mode for this functionality.")
			ELSE()
				ADD_SUBDIRECTORY(win-optris)
			ENDIF()
		ENDIF()
	ENDIF()
ENDIF()

IF(Boost_FOUND)
	ADD_SUBDIRECTORY(mono-slam)
ENDIF()

ADD_SUBDIRECTORY(mm-calibrator)
